--- a/content/100.supplement.md
+++ b/content/100.supplement.md
@@ -12,7 +12,7 @@ The following figure provides examples of reaction patterns that Metaboverse wil
 The following figure provides an example of the `Pattern Analysis` module within Metaboverse, with relevant points of interest highlighted and explained in the figure legend (Supplementary Figure @fig:supp_fig_module_pattern).
 
 ![
-  **Pattern Analysis module.**
+  **Pattern analysis module interface.**
   (a) The patterns currently available to search in Metaboverse are displayed in this panel. Users can adjust the thresholds for the given pattern using the appropriate fields. (b) For the selected pattern type, all available reaction-patterns within the organism's network will appear here. Reactions will be sorted by statistical values, as provided by the user, that were relevant to the identified pattern. Green stamps indicate both sides of the reaction contained significant values, yellow stamps indicate one side of the reaction contained significant values, and gray stamps indicate neither side of the reaction contained significant values. (c) This panel displays all of the pathways in which the reaction-pattern can be found. The graphic provides a simplified view of the reaction's primary substrates and products, with the nodes shaded by associated value. A user can select one of these pathways for viewing. (d) The selected pathway is displayed here, with all reaction-patterns in the pathway highlighted with a bold purple border. (e) If a user would like to view the selected pathway within the `Explore` module, they can click the icon to open the pathway in a new window. All reaction-patterns within the displayed pathway are listed below. (f) For time-course or multi-condition datasets, the user can choose to display reaction-patterns for the selected time-point or condition that are not present in another time-point or condition. (g) For time-course or multi-condition datasets, a slider bar will appear with the time-points or conditions for the user to select. (h) This panel provides a shape legend for the different shape types used in Metaboverse. (i) For time-course or multi-condition datasets, a line plot will appear for the selected reaction. While panels above only display the behavior of that reaction-pattern at a single time-point or condition, the line plot will display that reaction's behavior across all of the available time-points or conditions.
 ](./content/figures/pattern_module.png "Square image"){#fig:supp_fig_module_pattern}
 
@@ -28,7 +28,7 @@ Yeast time-course metabolomics processed data were obtained as measured and disc
 The following figure provides an example of the `Explore` module within Metaboverse, with relevant points of interest highlighted and explained in the figure legend (Supplementary Figure @fig:supp_fig_module_explore).
 
 ![
-  **Explore module.**
+  **Metabolite pathway exploration module interface.**
   (a) By hovering on the icon, users can view the shape legend. Below the shape legend is the compartment legend, where all currently displayed compartments in the selected pathway will be shown. (b) Users can toggle features on or off using the appropriate buttons. For example, users could choose to display all reaction names, not just when a reaction is selected. (c) Users can modulate graphing parameters, such as the number of reaction neighborhoods to graph when selecting a network component for nearest neighborhood analysis. (d) Notes about the selected reaction or synonyms for the selected reaction component appear here, as well as other information. (e) The drop-down menu for the selection of a super-pathway. (f) The drop-down menu for the selection of a specific pathway within the selected super-pathway. (g) For time-course and multi-condition datasets, a slider bar will appear that users can use to change value shading of nodes and highlighted reaction-patterns. (h) Viewing area for the selected pathway. (i) When users double-click on a reaction component, a nearest neighborhood graph will be displayed. In this instance, citrate was selected and all reactions citrate is involved in across all pathways are plotted.
 ](./content/figures/module_explore.png "Square image"){#fig:supp_fig_module_explore}
 
@@ -36,6 +36,6 @@ The following figure provides an example of the `Explore` module within Metabove
 The following figure provides an example of the `Perturbation Networks` module within Metaboverse, with relevant points of interest highlighted and explained in the figure legend (Supplementary Figure @fig:supp_fig_module_perturbation).
 
 ![
-  **Perturbation Networks module.**
+  **Perturbation networks module interface.**
   (a) Users can select what constitutes a perturbed reaction by modulating the appropriate thresholds. Only one type of perturbation (by magnitude or by statistical value) will be used. (b) Users select a super-pathway, for which all perturbed reactions belonging to that super-pathway are selected and displayed. Reactions that are neighbors and perturbed will be shown stitched together within the network, even if these reactions are connected across different pathways.
 ](./content/figures/module_perturbation.png "Square image"){#fig:supp_fig_module_perturbation}
