--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -5,7 +5,7 @@ Metabolism is a complex network of reactions and interactions between genes, enz
 Several computational tools have risen to prominence over the past decade to try to resolve these issues in data contextualization. We will highlight four such representative and popular tools for their respective properties, though many more exist [@doi:10.1530/JME-18-0055]. First is MetaboAnalyst, which relies heavily on set enrichment methods for the analysis of data, or examining the belongingness of sets of significantly changed analytes (i.e., metabolite, protein, or gene measurements), for extracting interesting information. Network visualization is available, but it focuses primarily on interaction networks, and its ability to extract regulatory information is limited, particularly in an automated fashion [@doi:10.1093/nar/gkp356; @doi:10.1093/nar/gky310]. Second is Cytoscape, which serves as a general go-to platform for representing biological or other networks. One strength of Cytoscape is the ability to design apps or plug-ins to conduct customized analyses; however, comprehensive and metabolism-specific regulatory identification methods are unavailable [@doi:10.1101/gr.1239303]. One plug-in for Cytoscape that focuses on metabolic data is MetScape, but again, this tool is generally limited to pathway enrichment, correlation networks, and data visualization and does not integrate approaches to identify regulatory mechanisms within the data [@doi:10.1093/bioinformatics/btx012; @doi:10.1093/bioinformatics/btr661; @doi:10.1093/bioinformatics/btq048]. MetExplore focuses on the curation of networks and is particularly useful for collaborative annotation of emerging models of organisms with incomplete metabolic network curations. It additionally can layer experimental data on the network for visualization [@doi:10.1093/nar/gky301; @doi:10.1093/nar/gkq312]. A companion tool to MetExplore is MetExploreViz, which enables interactive and flexible visualization of omics data on metabolic networks [@doi:10.1093/bioinformatics/btx588]. Reactome, which our tool uses for the curation of biological networks, also offers analytical tools for user data, but again relies on set enrichment or manual methods for identifying patterns. While all have their respective utility, there is a pressing need for tools that integrate these features and automate pattern and trend detection across metabolic networks to extract regulatory and other features from data [@doi:10.1093/nar/gki072; @pmid:31691815; @pmid:29145629]. This need is particularly pronounced in common cases where experimental data have sparse coverage of the metabolic network, a common situation in current metabolomics datasets. To address these limitations in metabolic data analysis, contextualization, and interpretation, we created Metaboverse, a cross-platform, interactive application to aid users in exploring and interpreting their model's metabolic story and generating new hypotheses from the available information (Figure  @fig:overview).
 
 ![
-  **Metaboverse conceptual overview.**
+  **Metaboverse rapidly identifies potential regulatory patterns within the metabolic network using user data.**
   Illustration summarizing the usage of Metaboverse to model biological data on the reaction network to rapidly identify regulatory patterns. Traditionally, when scientists perform an omics experiment, they tend to focus on a few features that are differentially regulated. Metaboverse allows a user to input multiple omics data types, which it layers upon the metabolic network. Metaboverse then uses this integrated model to identify patterns of putative regulatory potential within the data. The user can also dynamically explore metabolic pathways and other network representations.
 ](./content/figures/graphical_abstract.png "Tall image"){#fig:overview height=3.5in}
 
