--- a/content/03.results.md
+++ b/content/03.results.md
@@ -6,7 +6,7 @@
 We designed Metaboverse as a lightweight, self-contained, cross-platform app for the dynamic exploration of high-throughput biological data. The pathway curations are derived from Reactome [@doi:10.1093/nar/gkz1031], coupled with additional metabolite synonym cross-referencing and mapping from the ChEBI [@doi:10.1093/nar/gkv1031] and Human Metabolome (HMDB) [@doi:10.1093/nar/gkx1089] databases. As of the time of writing, Metaboverse is capable of analyzing data for over 90 species. A user begins by providing the desired output location for a new data model and specifying the organism of interest. If the user has previously curated data onto a reaction network for the selected organism of interest, they can alternatively provide this intermediate file. Next, the user provides the relevant transcriptomic, proteomic, and/or metabolomic datasets to layer onto the global reaction network of their organism of interest. Input data types can be extended to any dataset that uses the relevant mapping IDs; for example, one could provide ribosome profiling translation efficiency values mapped to the appropriate gene IDs for analysis upon the network. For each omics type, the user provides fold change and statistical values for each measurement. For example, if a user-provided data for a two-condition comparison transcriptomics dataset, these values would consist of log<sub>2</sub>(fold change) values between the experimental and control conditions, and the appropriate statistical values. As transcriptomics count data follows a negative binomial distribution, the appropriately adjusted p-values based on multiple hypothesis testing for this distribution should be used [@doi:10.1186/s13059-014-0550-8, @doi:10.1093/bioinformatics/btp616]. For other omics types, these multiple hypothesis testing methods will vary based on the data distribution and other conventions. During the data input step, the user will also specify a few experimental parameters for consideration during downstream analysis and visualization. For example, users with gene expression data can choose to "broadcast" their measured gene values to the protein nodes where the appropriate protein values are missing. Following these user inputs, the organism's network is curated and the data is overlaid upon the network. A database file for the dataset is output for future analysis (see Figure @fig:package_overview).
 
 ![
-  **Metaboverse software overview.**
+  **Metaboverse provides a simple, dynamic user interface for processing and exploring multi-omics datasets.**
   An illustration outlining the data input, processing, and exploration steps of the Metaboverse package. The user provides the name of the organism of interest from a drop-down menu along with an output location. The user then has the option to provide transcriptomics, proteomics, and/or metabolomics datasets. These datasets can be single- or multi-condition or time-course experiments. Data is formatted as follows: row names are the measured entity names or IDs, the first column is log<sub>2</sub>(fold change) or other measurement values, and the second column is statistical measurements. For time-course and multi-condition datasets, this pattern is repeated for each subsequent sample. During this step, the user can also provide sample labels and other modifiers to customize the curation of the data on the reaction network. Metaboverse will then build the model. Once the model is complete, the user will be able to visualize the patterns identified within reactions, explore pathway-specific or general perturbation networks, and perform general pathway and nearest reaction neighborhood exploration of the data.
 ](./content/figures/package_overview.png "Square image"){#fig:package_overview}
 
@@ -44,7 +44,7 @@ The second expected pattern of interest identified by Metaboverse was the marked
 Another point of interest is the up-regulation of Dic1 (log<sub>2</sub>(fold change): 2.15, adjusted p-value: 5.95E-06; Cohen's <i>d</i>: 28.97), which catalyzes the exchange of dicarboxylates like malate (at 15 min; log<sub>2</sub>(fold change): 2.61, adjusted p-value: 3.23E-06; Cohen's <i>d</i>: 5.12) between the mitochondrial matrix and cytosol. Interestingly, Dic1 is essential for growth on non-fermentable carbon source media [@doi:10.1046/j.1365-2958.1999.01197.x]. When yeast, especially those with deficits in TCA cycle flux due to loss of Mct1, are switched to a non-fermentable carbon, as was done in this study, they might adapt by up-regulating Dic1, which we observed in this data.
 
 ![
-  **Metaboverse identifies several reaction patterns of interest in <i>mct1</i>&Delta; cells.**
+  **Metaboverse identifies and contextualizes respiratory signatures of biological relevance in <i>mct1</i>&Delta; cells.**
   (A) Steady-state proteomics (12 hours) overlaid on the reaction, "Electron transfer from ubiquinol to cytochrome c of complex III." (B) Steady-state proteomics (12 hours) and metabolomics at 15 minutes overlaid on TCA-related reactions. Time stamps for each data type are displayed in the lower-right hand corner of each subplot. Measured values are shown as node shading, where an increasingly blue shade indicates down-regulation, and an increasingly red shade indicates up-regulation. Measured log<sub>2</sub>(fold change) and statistical values for each entity are displayed below the node name. A gray node indicates a reaction. A bold gray node with a purple border indicates a potential regulatory pattern at this reaction for the given data type time points. Circles indicate metabolites, squares indicate complexes, diamonds indicate proteins, and triangles indicate gene components. Gray edges are core relationships between reaction inputs and outputs. Green edges indicate a catalyst. Dashed blue edges point from a metabolite component to the complex in which it is involved. Dashed orange edges point from a protein component to the complex in which it is involved. Dashed purple edges point from a gene component to its protein product. Protein complexes with dashed borders indicate that the values displayed on that node were inferred from the constituent protein, metabolite, and gene measurements. The background shading demonstrates Metaboverse's ability to show cellular compartmentalization, although users may opt to toggle compartment shading off at any time.
 ](./content/figures/fig_mct1.png "Square image"){#fig:mct1_vignette}
 
@@ -60,6 +60,6 @@ Consistent with the original study [@doi:10.1158/1940-6207.CAPR-14-0329] and our
 Metaboverse simplifies the analysis process of metabolic data and allows the user more flexibility via an interactive platform that augments the identification of both canonical and novel regulatory patterns within the data. We were able to identify the regulatory pattern identified in Figure @fig:lung_vignette C previously using more manual approaches, but Metaboverse offers an automated platform for the discovery of such events not identified in the original study. We anticipate that the use of Metaboverse will enable the user to extract new and exciting hypotheses that can drive their fields forward.
 
 ![
-  **Metaboverse identifies nucleotide metabolism and other signatures in lung adenocarcinoma metabolomics data.**
+  **Metaboverse identifies nucleotide metabolism and other previously unidentified metabolic signatures in lung adenocarcinoma metabolomics data.**
   (A) Up-regulation of polyamine and nucleotide metabolites. (B) Identification of xanthine regulation by both the pattern recognition and perturbation analysis modules. (C) Regulatory activity between glyceric acid and 3-Phosphoglyceric acid identified by Metaboverse's pattern recognition analysis module. (D) Disruptions of TCA metabolism support canonical disruptions during adenocarcinoma development. Metabolomics values are shown as node shading, where an increasingly blue shade indicates down-regulation and an increasingly red shade indicates up-regulation. Measured log<sub>2</sub>(fold change) and statistical values for each entity are displayed below the node name. A gray node indicates a reaction. A bold gray node with a purple border indicates a motif at this reaction. Circles indicate metabolites, squares indicate complexes, and diamonds indicate proteins. Gray edges indicate core relationships between reaction inputs and outputs. Green edges indicate a catalyst, and red edges indicate inhibitors. Dashed blue edges point from a metabolite component to the protein complex in which it is involved. Dashed orange edges point from a protein component to the protein complex in which it is involved. Protein complexes with dashed borders indicate that the values displayed on that node were inferred from the constituent protein and metabolite measurements. Hub limit was set at 30 during generation of the network visualization as shown in sub-panel (D).
 ](./content/figures/fig_lung.png "Tall image"){#fig:lung_vignette}
