--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -2,13 +2,11 @@
 
 Metabolism is a complex network of reactions and interactions between genes, enzymes, protein complexes, and metabolites [@doi:10.3390/metabo9040076]. To understand these complex components, researchers frequently adopt reductionist approaches to tease apart the characteristics and mechanics of these processes and determine how they fit into the larger picture of biology and disease. Such approaches are a vital component in the scientific process, but a reductionist approach may miss many essential properties of metabolism. For example, in differential gene expression analysis, researchers rely on thresholds of magnitude and statistical significance to prioritize genes for follow-up study. However, this can inadvertently limit the scope of study of metabolism when, in fact, metabolism is a highly interconnected system where distal components and their modulation can have coordinated or rippling effects across the network [@doi:10.1016/j.coisb.2018.10.001; @doi:10.1038/s41540-018-0067-y]. Biological perturbations involve complex, cooperative effects, many of which may seem negligible in isolation. The current approach is analogous to telling the story of Little Red Riding Hood by reading only the 20 most frequent words. Indeed, doing so efficiently highlights keywords like "wolf" and "little red riding hood," but also prevents a coherent story from being told. This approach makes it difficult for someone who has never heard the story of Little Red Riding Hood to comprehend the plot and especially the higher-level interpretations of the story.
 
-Several computational tools have risen to prominence over the past decade to try to resolve these issues in data contextualization. We will highlight four such representative and popular tools for their respective properties, though many more exist [@doi:10.1530/JME-18-0055]. First is MetaboAnalyst, which relies heavily on set enrichment methods for the analysis of data, or examining the belongingness of sets of significantly changed analytes (i.e., metabolite, protein, or gene measurements), for extracting interesting information. Network visualization is available, but it focuses primarily on interaction networks, and its ability to extract regulatory information is limited, particularly in an automated fashion [@doi:10.1093/nar/gkp356; @doi:10.1093/nar/gky310]. Second is Cytoscape, which serves as a general go-to platform for representing biological or other networks. One strength of Cytoscape is the ability to design apps or plug-ins to conduct customized analyses; however, comprehensive and metabolism-specific regulatory identification methods are unavailable [@doi:10.1101/gr.1239303]. One plug-in for Cytoscape that focuses on metabolic data is MetScape, but again, this tool is generally limited to pathway enrichment, correlation networks, and data visualization and does not integrate approaches to identify regulatory mechanisms within the data [@doi:10.1093/bioinformatics/btx012; @doi:10.1093/bioinformatics/btr661; @doi:10.1093/bioinformatics/btq048]. MetExplore focuses on the curation of networks and is particularly useful for collaborative annotation of emerging models of organisms with incomplete metabolic network curations. It additionally can layer experimental data on the network for visualization [@doi:10.1093/nar/gky301; @doi:10.1093/nar/gkq312]. A companion tool to MetExplore is MetExploreViz, which enables interactive and flexible visualization of omics data on metabolic networks [@doi:10.1093/bioinformatics/btx588]. Reactome, which our tool uses for the curation of biological networks, also offers analytical tools for user data, but again relies on set enrichment or manual methods for identifying patterns. While all have their respective utility, there is a pressing need for tools that integrate these features and automate pattern and trend detection across metabolic networks to extract regulatory and other features from data [@doi:10.1093/nar/gki072; @pmid:31691815; @pmid:29145629]. This need is particularly pronounced in common cases where experimental data have sparse coverage of the metabolic network, a common situation in current metabolomics datasets. To address these limitations in metabolic data analysis, contextualization, and interpretation, we created Metaboverse, a cross-platform, interactive application to aid users in exploring and interpreting their model's metabolic story and generating new hypotheses from the available information (Figure  @fig:overview).
+While several computational tools have risen to prominence over the past decade to try to resolve these issues in data contextualization, all lack the ability to rapidly extract a comprehensive list of regulatory patterns within user data [@doi:10.1093/nar/gkp356; @doi:10.1093/nar/gky310; @doi:10.1101/gr.1239303; @doi:10.1093/bioinformatics/btx012; @doi:10.1093/bioinformatics/btr661; @doi:10.1093/bioinformatics/btq048; @doi:10.1093/nar/gky301; @doi:10.1093/nar/gkq312; @doi:10.1093/bioinformatics/btx588; @doi:10.1093/nar/gki072; @pmid:31691815; @pmid:29145629] (a brief discussion of these referenced representative tools for metabolic network analysis is available in the Supplementary Methods). This inability to extract vital information from the metabolic network is particularly pronounced in cases where experimental data have sparse coverage of the metabolic network, a common situation in current metabolomics datasets. To address these limitations in metabolic data analysis, contextualization, and interpretation, we created Metaboverse, a cross-platform, interactive application to aid users in exploring and interpreting their model's metabolic story and generating new hypotheses from the available information (Figure @fig:overview). Importantly, Metaboverse introduces interactive modules that enable the rapid and automated discovery of regulatory patterns across all reactions in the network and allows for the identification of these patterns across sets of multiple reactions. We also incorporate modules that allow for the exploration of reaction neighborhood perturbations and super-pathway total perturbation networks. Since the initial public release of Metaboverse, we have also received feedback from multiple users. These requested features are also available within Metaboverse.
 
 ![
   **Metaboverse rapidly identifies potential regulatory patterns within the metabolic network using user data.**
   Illustration summarizing the usage of Metaboverse to model biological data on the reaction network to rapidly identify regulatory patterns. Traditionally, when scientists perform an omics experiment, they tend to focus on a few features that are differentially regulated. Metaboverse allows a user to input multiple omics data types, which it layers upon the metabolic network. Metaboverse then uses this integrated model to identify patterns of putative regulatory potential within the data. The user can also dynamically explore metabolic pathways and other network representations.
 ](./content/figures/graphical_abstract.png "Tall image"){#fig:overview height=3.5in}
 
-To provide a robust platform for the exploration of single or multi-omic metabolic data in two-condition, multi-condition, and time-course contexts, we developed several computational features to address the aims discussed above. We developed a pattern search engine for the rapid and automated identification of different patterns and trends in omics data on the metabolic network. Metaboverse allows for the interactive exploration of specific reactions or reaction entities with on-the-fly pattern search analysis. The user can explore canonical pathways of interest and look for other interesting patterns and trends within these pathways. Perturbations in the abundance or behavior of a particular metabolic component can lead to downstream gene expression changes and other phenotypic modulations in a biological system. Users can therefore select a given component and explore the upstream and downstream reaction neighbors across the total reaction network. In addition, users can also use a drop-down menu to select any component and immediately view its reaction neighborhood. We also include an interactive perturbation exploration module, which displays all the perturbed reactions from the selected super-pathway. Finally, we tackle the challenge of sparsity, particularly in metabolomics datasets. We implement a reaction collapsing feature that can help the user identify more inconspicuous patterns across multiple reactions within the total reaction network.
-
-To validate the features and methods available in Metaboverse, we analyzed a variety of datasets to provide representative vignettes that highlight the reliability of Metaboverse for extracting canonical features, and its power for identifying novel features and patterns and generate new hypotheses. We expect that Metaboverse will become a foundational tool in the analytical toolkit and augment the user's ability to more holistically explore and contextualize metabolic reaction networks.
+To demonstrate the ability of Metaboverse to identify canonical, expected, and novel patterns within the reaction networks and showcase its other interactive analysis features, we analyzed single- and multi-omics datasets of multiple organisms. With the ranked output of Metaboverse's search pattern algorithm, we are able to formulate new hypotheses for each model. We expect that Metaboverse will become a foundational tool in the analytical toolkit and augment the user's ability to more holistically explore and contextualize metabolic reaction networks.
