--- a/content/100.supplement.md
+++ b/content/100.supplement.md
@@ -1,5 +1,8 @@
 ## Supplementary Material {.page_break_before}
 
+### A brief overview of representative metabolic network analysis tools
+We will highlight four such representative and popular tools for their respective properties, though many more exist [@doi:10.1530/JME-18-0055]. First is MetaboAnalyst, which relies heavily on set enrichment methods for the analysis of data, or examining the belongingness of sets of significantly changed analytes (i.e., metabolite, protein, or gene measurements), for extracting interesting information. Network visualization is available, but it focuses primarily on interaction networks, and its ability to extract regulatory information is limited, particularly in an automated fashion [@doi:10.1093/nar/gkp356; @doi:10.1093/nar/gky310]. Second is Cytoscape, which serves as a general go-to platform for representing biological or other networks. One strength of Cytoscape is the ability to design apps or plug-ins to conduct customized analyses; however, comprehensive and metabolism-specific regulatory identification methods are unavailable [@doi:10.1101/gr.1239303]. One plug-in for Cytoscape that focuses on metabolic data is MetScape, but again, this tool is generally limited to pathway enrichment, correlation networks, and data visualization and does not integrate approaches to identify regulatory mechanisms within the data [@doi:10.1093/bioinformatics/btx012; @doi:10.1093/bioinformatics/btr661; @doi:10.1093/bioinformatics/btq048]. MetExplore focuses on the curation of networks and is particularly useful for collaborative annotation of emerging models of organisms with incomplete metabolic network curations. It additionally can layer experimental data on the network for visualization [@doi:10.1093/nar/gky301; @doi:10.1093/nar/gkq312]. A companion tool to MetExplore is MetExploreViz, which enables interactive and flexible visualization of omics data on metabolic networks [@doi:10.1093/bioinformatics/btx588]. Reactome, which our tool uses for the curation of biological networks, also offers analytical tools for user data, but again relies on set enrichment or manual methods for identifying patterns. While all have their respective utility, there is a pressing need for tools that integrate these features and automate pattern and trend detection across metabolic networks to extract regulatory and other features from data [@doi:10.1093/nar/gki072; @pmid:31691815; @pmid:29145629].
+
 ### Examples of reaction patterns in Metaboverse
 The following figure provides examples of reaction patterns that Metaboverse will search for in the network based on the user's data (Supplementary Figure  @fig:supp_fig_pattern_examples).
 
@@ -15,14 +18,6 @@ The following figure provides an example of the `Pattern Analysis` module within
   **Pattern analysis module interface.**
   (a) The patterns currently available to search in Metaboverse are displayed in this panel. Users can adjust the thresholds for the given pattern using the appropriate fields. (b) For the selected pattern type, all available reaction-patterns within the organism's network will appear here. Reactions will be sorted by statistical values, as provided by the user, that were relevant to the identified pattern. Green stamps indicate both sides of the reaction contained significant values, yellow stamps indicate one side of the reaction contained significant values, and gray stamps indicate neither side of the reaction contained significant values. (c) This panel displays all of the pathways in which the reaction-pattern can be found. The graphic provides a simplified view of the reaction's primary substrates and products, with the nodes shaded by associated value. A user can select one of these pathways for viewing. (d) The selected pathway is displayed here, with all reaction-patterns in the pathway highlighted with a bold purple border. (e) If a user would like to view the selected pathway within the `Explore` module, they can click the icon to open the pathway in a new window. All reaction-patterns within the displayed pathway are listed below. (f) For time-course or multi-condition datasets, the user can choose to display reaction-patterns for the selected time-point or condition that are not present in another time-point or condition. (g) For time-course or multi-condition datasets, a slider bar will appear with the time-points or conditions for the user to select. (h) This panel provides a shape legend for the different shape types used in Metaboverse. (i) For time-course or multi-condition datasets, a line plot will appear for the selected reaction. While panels above only display the behavior of that reaction-pattern at a single time-point or condition, the line plot will display that reaction's behavior across all of the available time-points or conditions.
 ](./content/figures/pattern_module.png "Square image"){#fig:supp_fig_module_pattern}
-
-### Reaction collapsing reveals multi-reaction putative regulatory patterns
-Yeast time-course metabolomics processed data were obtained as measured and discussed in this study in Vignette 1. Metaboverse reaction-pattern searches identified a pattern across the two-step transformation of glutathione and methylglyoxal into lactate at 60 minutes after the carbon source shift. Since the intermediate metabolite was not measured in the dataset, but the inputs to the first reaction and the outputs to the second reaction were measured, Metaboverse collapsed the two reactions into one, thus enabling pattern recognition across two reactions (Figure @fig:supp_fig_collapse). Conventional methods might have missed such a reaction without summarizing the intermediate steps where the intermediate metabolite(s) are not measured. This transformation is particularly important in this model as lactate is closely tied to TCA metabolism and may provide explanatory mechanisms for the changes in TCA metabolism observed in this model.
-
-![
-  **Reaction collapsing reveals putative regulatory patterns across TCA metabolism-proximal reactions in mtFAS-deficient yeast.**
-  (Left) Metabolomics values are shown as node shading, where an increasingly blue shade indicates down-regulation, and an increasingly red shade indicates up-regulation. Measured log<sub>2</sub>(fold change) and statistical values for each entity are displayed below the node name. A gray node indicates a reaction. A bold gray node with a purple border indicates a pattern was found at this reaction for the given data-type time points. A dashed purple border indicates a pattern was discovered across collapsed reactions. Circles indicate metabolites, squares indicate protein complexes, diamonds indicate proteins, and triangles indicate genes. Gray edges are core relationships between reaction inputs and outputs. Green edges indicate a catalyst. Dashed blue edges point from a metabolite component to the complex in which it is involved. Dashed orange edges point from a protein component to the complex in which it is involved. The background shading indicates different cellular compartments for each color. The displayed values are for the 60 minute time point. (Right) A screenshot from the Reactome (v73; https://reactome.org/PathwayBrowser/#/R-HSA-1428517&PATH=R-HSA-1430728) pathway explorer of this two-step reaction set.
-](./content/figures/supp_fig_collapse.png "Square image"){#fig:supp_fig_collapse}
 
 ### Example for the General Exploration module
 The following figure provides an example of the `Explore` module within Metaboverse, with relevant points of interest highlighted and explained in the figure legend (Supplementary Figure @fig:supp_fig_module_explore).
