--- a/mct1_analysis/notebooks/sandbox.ipynb
+++ b/mct1_analysis/notebooks/sandbox.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -127,8 +127,8 @@
      "output_type": "stream",
      "text": [
       "Initial dataframe size: (7127, 24)\n",
-      "Count thresholding: (5396, 24)\n",
-      "Remove misc. RNAs: (5305, 25)\n",
+      "Count thresholding: (5643, 24)\n",
+      "Remove misc. RNAs: (5450, 25)\n",
       "\n",
       "Check outputs:\n",
       "14251X1     1000000.0\n",
@@ -161,10 +161,11 @@
    ],
    "source": [
     "rnaseq_tpm = rnaseq.copy()\n",
+    "\n",
     "print(\"Initial dataframe size: \" + str(rnaseq_tpm.shape))\n",
     "\n",
     "# remove RNAs with less than 50 counts\n",
-    "rnaseq_tpm = rnaseq_tpm[rnaseq_tpm.min(axis=1) > 50]\n",
+    "rnaseq_tpm = rnaseq_tpm[rnaseq_tpm.min(axis=1) > 25]\n",
     "print(\"Count thresholding: \" + str(rnaseq_tpm.shape))\n",
     "\n",
     "# remove RNAs with unmapped lengths -- most are dubious ORFs, ncRNAs, etc.\n",
@@ -188,6 +189,31 @@
     "print(\"\\nCheck outputs:\")\n",
     "print(rnaseq_tpm.sum())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnaseq_tpm.to_csv(\n",
+    "    os.path.join(rna_source_url, \"sce_mct1_deduped_tpm_threshold25.tsv\"),\n",
+    "    sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
